src/css/custom.css
/* ... */
.titleBlog{
  margin-top: 30px;
  margin-left: 40px
}

.titleGit1{
  margin-top: 30px;
  margin-left: 40px
}

.titleGit2{
  margin-top: 60px;
  margin-left: -50px
}

.topSpacingBoxIcons{
  margin-top: 3rem;
}

.paddingTopGrid{
  padding-top: 100px
}

.paddingTop{
  padding-top: 100px
}

.litlePaddingTop{
  padding-top: 18px
}


.displayLine{
  display: none
}

.imgBoxProjects{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.littleImage{
  width: 150px;
  height: 170px;
  flex: 0 0 auto;
  margin: 1px;
}

.imageIndrustries{
  width: 150px;
  height: 220px;
  flex: 0 0 auto;
}

.imageIndrustriesLogistics{
  width: 250px;
  height: 220px;
  flex: 0 0 auto;
}

.reduceMarginBottom
{
  height: 1120px;
}

.reduceMarginTop
{
  margin-top: -100px
}

.reduceDobleMarginTop
{
  margin-top: -200px
}

.reduceMediumMarginTop
{
  margin-top: -35px
}

.specialButton{
  width: 100%;
}

.imgBoxTheCompany{
  display: flex;
  justify-content: center;
  height: 100px;
  margin-bottom: 2rem;
}

.sizeImageTheCompany{
  width: 300px;
  height: 100px;
}

.centerText{
  text-align: center;
}

.noMarginsTop{
  margin-left: 18px;
  margin-right: 18px;
}

.socialMediaAnimation{
  transition: all .4s ease-in-out
}

.socialMediaAnimation:hover{
  transform: scale(1.1);
}

.animationBox{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 350px;
}

.footerLogo {
  width: 300px;
  height: 90px;
}

.footerLogoAnimation{
  transition: all .9s ease-in-out;
  transform: scale(0.87);
}

.teamPadding{
  padding: 2rem;
}

.projectsGridLeft{
  padding-top: 70px;
  padding-bottom: 70px;
  padding-right: 40px;
  height: 100%;
}

.projectsGridRight{
  padding-top: 70px;
  padding-bottom: 70px;
  padding-right: 40px;
  height: 100%;
}

@media only screen and (max-width: 767px) {
  .footerLogo {
    width: 300px;
    height: 110px;
  }
  
  .footerLogoBox{
    display: flex;
    justify-content: center;
  }

  .h3Footer{
    text-align: center;
  }

  .body1Footer{
    text-align: center;
  }

  .linkFooter{
    text-align: center;
  }

  .buttonBox{
    width: 100%;
    display: flex;
    justify-content: center;
  }

  .containerSec{
    width: 100%;
  }

  .section{
    width: 100%;
  }

  .sectionNoPadding{
    width: 100%;
  }
  
  .sectionPadding{
    padding-top: 80px;
    padding-bottom: 80px;
    width: 100%;
  }

  .accordionBox{
    width: 100%;
    padding-left: 25px;
    padding-right: 25px;
  }

  .imgBoxLogos{
    height: auto;
    margin-top: 40px;
    margin-bottom: 40px;
  }

  .oneGroupLogo{
    transform: scale(1.1);
  }

  .inquiereBox{
    height: auto;
  }

  .imgKnow{
    width: 100%;
    height: 100%;
  }

  .imgKnowCompany{
    width: 100%;
    height: 100%;
  }
  
  .imgProjects{
    width: 100%;
  }

  .contactFormBox{
    padding-left: 5vw;
    padding-right: 5vw;
  }

  .nameText{
    font-size: 20px;
    text-align: center;
  }

  .positionText{
    text-align: center;
    font-size: 18px;
  }

  .bioText{
    text-align: center;
  }

  .socialMediaBox{
    display: flex;
    justify-content: center;
    margin-top: 15px;
  }

  .sizeImageTheCompany{
    width: 190px;
  }

  .animationBox{
    height: 150px;
    margin-bottom: 50px;
  }
  
  h1{
    line-height: 30px;
    font-size: 30px;
    text-align: left;
    margin-bottom: 4px;
    padding-left: 25px;
    padding-right: 25px;
  }

  h2{
    line-height: 25px;
    font-size: 25px;
    text-align: left;
    margin-bottom: 6px;
    padding-left: 25px;
    padding-right: 25px;
  }

  h3{
    line-height: 22px;
    font-size: 20px;
    text-align: left;
    margin-bottom: 4px;
    padding-left: 25px;
    padding-right: 25px;
  }

  h4{
    line-height: 25px;
    font-size: 18px;
    text-align: left;
    padding-left: 25px;
    padding-right: 25px;
  }

  p{
    line-height: 18px;
    font-size: 15px;
    padding-left: 25px;
    padding-right: 25px;
  }

  /*blog*/
  .blog-wrapper{
    margin-top: 50px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .blog-wrapper a {
    /*color: #5484b3;*/
  }

  .blog-wrapper h1{
    font-size: 30px;
    text-align: left;
    padding: 0;
  }

  .blog-wrapper h2{
    font-size: 25px;
    text-align: left;
    padding: 0;
  }

  .blog-wrapper h3{
    font-size: 20px;
    text-align: left;
    padding: 0;
  }

  .blog-wrapper h4{
    font-size: 15px;
    padding: 0;
    text-align: left;
  }

  .blog-wrapper p{
    font-family: Lato, sans-serif;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    letter-spacing: -0.05px;
    text-align: justify;
    margin-bottom: 15px;
    padding: 0;
    line-height: 18px;
    font-size: 15px;
  }

  .titleDevs1{
    margin-top: 35px;
    margin-left: 20px
  }

  .titleDevs2{
    margin-top: 45px;
    margin-left: -84px
  }

  .titleBlog{
    margin-left: 25px
  }

  .titleGit1{
    margin-top: 30px;
    margin-left: 36px
  }

  .titleGit2{
    margin-top: 50px;
    margin-left: -70px
  }

  .gridButton{
    justify-content: center;
    padding: 30px;
  }

  .resourcesIcon{
    width: 80px;
  }

  .topSpacingBoxIcons{
    margin-top: -10px;
  }

  .paddingTopGrid{
    padding-top: 0
  }

  .readMoreMargin{
    margin-left: 20px
  }

  .displayLine{
    display: flex;
    margin-top: -1.7px;
  }

  .marginTopAccordion
  {
    margin-top:-70px
  }

  .boxFlexEnd{
    display: flex;
    justify-content: center;
  }

  .reduceMarginTop
  {
    margin-top: 0
  }

  .reduceDobleMarginTop
  {
    margin-top: 0
  }
  
  .reduceMarginBottom{
    height: 1650px;
  }

  .specialButton{
    width: auto;
  }

  .centerTextOnMobile{
    text-align: center;
  }

  .projectsGridLeft{
    padding-bottom: 0;
    padding-left: 40px;
    padding-right: 40px;
  }

  .projectsGridRight{
    padding-top: 50px;
    padding-right: 0;
  }
}

